# BMO-Companion-AI

./: .gitignore  AIEngine.py  AITools.py  BMO.Modelfile  Media.py  README.md  TTSEngine.py  bmo_diary.txt  main.py  pyproject.toml  srTest.py  test.py
src/: AIEngine.py  GoogleVoiceProcessing.py  Media.py  TTSEngine.py  VoiceProcessing.py
