[project]
name = "bmo-companion-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.6.0",
    "pocketsphinx>=5.0.4",
    "pyaudio>=0.2.14",
    "pyttsx3>=2.99",
    "speechrecognition>=3.14.3",
    "vosk>=0.3.45",
]
