[project]
name = "bmo-companion-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "just-playback>=0.1.8",
    "keyboard>=0.13.5",
    "ollama>=0.6.0",
    "openai>=2.6.0",
    "openai-whisper>=20250625",
    "piper-tts>=1.3.0",
    "pyaudio>=0.2.14",
    "pyttsx3>=2.99",
    "setuptools-rust>=1.12.0",
    "simpleaudio>=1.0.4",
    "speechrecognition>=3.14.3",
]
